se agregaron los benchmarks de las operaciones del punto. faltan las de los elementos de campo finitos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "programming_btc"
 version = "0.1.0"
 edition = "2021"
 
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "point_benchmark"
+harness = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
